# trogue

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  build-and-upload-to-ppa.sh  build.sh  instructions.md
.agent/rules/: develop.md
.gemini/commands/: trogue.develop.toml
.kilocode/rules/: instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
debian/: changelog  control  files  install  rules
debian/patches/: Minor-tweaks  series
src/: app.rs  cfg.rs  constants.rs  environment.rs  main.rs  steam_api.rs  tui.rs  ui.rs
src/plugins/: completions.rs  dashboard.rs  list_achievements.rs  list_games.rs  mod.rs  show_progress.rs
