[package]
name = "trophyroom"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
crossterm = "0.23"
clap = { version = "4.0", features = ["derive"] }

async-trait = "0.1.81"

[dev-dependencies]
gag = "1.0.0"
lazy_static = "1.4.0"
mockito = "1.4.0"