[package]
name = "trogue"
version = "0.1.1"
edition = "2021"
description = "A terminal-based client for viewing Steam achievements."
authors = ["Hieropold <hieropold@gmail.com>"]
license = "Apache"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
crossterm = "0.23"
clap = { version = "4.0", features = ["derive"] }

async-trait = "0.1.81"

[dev-dependencies]
gag = "1.0.0"
lazy_static = "1.4.0"
mockito = "1.4.0"

[package.metadata.deb]
copyright = "2025 Hieropold"
license-file = "LICENSE"
depends = "libssl-dev"